# approxcaliper

./: .gitignore  .gitmodules  README.md  env.yaml  figures.py  infer_req.txt  onnx_perf.py  parse_perf.py  train_cropfollow.yaml  train_lanenet.yaml  traindnn.py
approxcaliper/: setup.cfg
approxcaliper/approxcaliper/: __init__.py  _logging.py  compress.py  screenguard.py  search.py  tuner_search.py
approxcaliper/approxcaliper/infer/: __init__.py  __main__.py  models.py  trt_fp16.py
cropfollow/agdnns/: __init__.py
cropfollow/agdnns/nav/: __init__.py  darknet.py  dataset.py  metric.py  model.py
