[metadata]
name = approxcaliper
version = 0.1
author = Yifan Zhao
author_email = yifanz16@illinois.edu
description = An application context aware DNN approximation tool.

[options]
python_requires = >= 3.6
packages = find:
test_suite = tests
setup_requires =
    setuptools
install_requires =
    opentuner
    numpy
    torch >= 1.8
    pytorch-lightning >= 1.3, < 1.4
    tqdm

[options.packages.find]
include = 
    approxcaliper
    approxcaliper.*
